Add Creating transaction function
