# app/Http/Resources/TransactionDetailResource.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class TransactionDetailResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'product_id' => $this->product_id,
+            'price' => $this->price,
+            'qty' => $this->qty,
+
+            'product' => new ProductResource(
+                $this->whenLoaded('product')
+            ),
+        ];
+    }
+}
